fix spacing of social icons and text

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -193,6 +193,7 @@ blockquote {
 
 .profile.float-right {
   margin-left: 1rem;
+  margin-bottom: 2rem;
 }
 
 .profile.float-left {
